stylesheets/default.css
/* ... */
#about {
    clear: both;
    font-size: 60%;
    padding: 5px 0px 5px 0px;
}

#validation {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

#joblist {
    float: left;
    text-align: left;
    margin-left: 10px;
    margin-right: 10px;
    width: 98%;
    margin-top: 20px;
}

#input input {
    vertical-align: middle;
}

#queue {
    margin-bottom: 1em;
}

#queue table {
    font-size: 80%;
    padding-bottom: 1em;
}

#queue td {
    text-align: center;
    border: thin solid;
}

#queue td.del {
    width: 3%;
}

#queue td.nr {
    width: 3%;
}

#queue td.owner {
    width: 10%;
}

#queue td.files {
    width: 24%;
}

#queue td.created {
    width: 15%;
}

#queue td.status {
    width: 8%;
}

#queue td.started {
    width: 15%;
}

#queue td.pid {
    width: 8%;
}

#queue td.server {
    width: 14%;
}

#queue input {
    vertical-align: middle;
}

#listusers {
    text-align: center;
    padding-bottom: 1em;
}

#listusers table {
    font-size: 70%;
}

#listusers tr.upline {
    border-right: thin solid;
    border-top: thin solid;
    border-left: thin solid;
}

#listusers tr.bottomline {
    margin-bottom: 1em;
    border-right: thin solid;
    border-left: thin solid;
    border-bottom: thin solid;
}

#listusers p {
    text-align: center;
}

#listusers td {
    padding: 3px;
}

#listusers td.menu {
    padding: 0px;
}

#listusers td.hr {
    padding: 0px;
}

#listusers td.notice {
    font-size: medium;
}

#homepage {
    width: 750px;
    text-align: left;
    margin: 15px;
}

#homepage table {
    border: 0px;
    font-size: 14px;
}

#homepage table tr {
    height: 120px;
    vertical-align: bottom;
}

#homepage table td {
    padding: 3px;
}

#homepage table td.icon {
    width: 120px;
}

#homepage table td img {
    width: 96px;
    height: 96px;
}

#homepage table td.text {
    text-align: left;
    width: 50%;
}

#homepage table a:link {
    font-size: 20px;
    font-weight: bold;
    color: #000;
}

#homepage table a:visited {
    font-size: 20px;
    font-weight: bold;
    color: #000;
}

td {
    text-align: center;
}

td.name {
    text-align: left;
}

td.group {
    text-align: center;
}

td.email {
    width: 50%;
    text-align: right;
}

td.date {
    text-align: left;
}

td.operations {
    text-align: right;
}

td.operations input {
    font-size: 70%;
}

tr.disabled {
    background: silver;
}

a.selected {
    color: black;
    text-decoration: none;
    border: solid 1px;
}

a.empty {
    color: rgb(194, 26, 26);
    text-decoration: none;
    border: solid 1px white;
    font-size: 9px;
}

a.filled {
    color: blue;
    text-decoration: none;
    border: solid 1px white;
    font-size: 9px;
}

#box #adduser {
    padding-right: 5em;
}

#adduser {
    text-align: right;
    padding-right: 3em;
}

#adduser textarea {
    width: 50%;
}

span.spacer {
    display: block;
    clear: both;
}

fieldset {
    margin: 5px;
    padding: 10px 5px 10px 5px;
}

fieldset legend {
    font-size: 1.0em;
    font-weight: bold;
}

fieldset.report {
    margin-top:10px;
    margin-bottom:10px;
}

fieldset.p {
    
}


ol li {
    display: inline;
}

input.icon {
    width: 60px;
    height: 60px;
    color: #fff;
    font-size: 0px;
    text-align: left;
    cursor: pointer;
    border: none;
}

input.empty {
    width: 60px;
    height: 60px;
    cursor: default;
    background: url(../images/empty.png);
}

input.previous {
    width: 60px;
    height: 60px;
    background: url(../images/previous.png) no-repeat right;
}

input.next {
    width: 60px;
    height: 60px;
    background: url(../images/next.png) no-repeat right;
}

input.up {
    width: 60px;
    height: 60px;
    background: url(../images/up.png) no-repeat right;
}

input.calc {
    width: 60px;
    height: 60px;
    background: url(../images/calc.png) no-repeat right;
}

input.ok {
    width: 60px;
    height: 60px;
    background: url(../images/ok.png) no-repeat center;
}

input.cancel {
    width: 60px;
    height: 60px;
    background: url(../images/cancel.png) no-repeat center;
}

input.apply {
    width: 60px;
    height: 60px;
    background: url(../images/apply.png) no-repeat center;
}

input.back {
    width: 60px;
    height: 60px;
    background: url(../images/back.png) no-repeat center;
}

input.restart {
    width: 60px;
    height: 60px;
    background: url(../images/restart.png) no-repeat center;
}

input.oversampled {
    background-color: #ADDFFF; /* This was lightblue */
}

input.optimal {
    background-color: #41A317; /* This was limegreen */
}

input.valid {
    background-color: #FF8040; /* This was orange */
}

input.invalid {
    background-color: #FF0000; /* This was orangered */
}

input.noPreview {
    width: 200px;
    height: 200px;
    background: url(../images/no_preview.jpg) no-repeat center;
}


span.multichannel {
    margin-left: -8px;
}

div.multichannel {
    text-align: center;
}

.nowrap {
    white-space: nowrap;
}

.multichannelinput {
    text-align: right;
}

option.default {
    color: #078d1b;
}

.line {
    display: block;
}

.textfield {
    width: 50%;
    text-align: left;
    vertical-align: middle;
    margin-right: 5px;
}

.psffile {
    width: 70%;
}

.psfmissing {
    width: 70%;
    color: red;
}

.button {
    width: 25%;
    text-align: center;
    margin: 5px 15px 5px 0px;
}

.submit {
    width: 30%;
}

.message {
    font-size: 10px;
    font-weight: bold;
    margin: 0px;
    padding: 0px;
}

.warning {
    font-weight: bold;
    color: red;
}

.notice {
    text-align: center;
}

.info {
    color: red;
}

.dbOutDated {
    background-color: #FF0000;
    color: white;
    font-size: 120%;
}

.title {
    font-weight: bold;
}

.menu {
    font-size: 80%;
    text-align: center;
}

.normal {

}

.footnote {
    font-size: 70%;
}

.disabled {
    background: gray;
}

